--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <title>Xmeme</title>
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js">    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body class="bg-warning">
         <div class="pos-f-t">
             <nav class="navbar navbar-dark bg-dark">
                 <p class="alert btn-danger mt-2 px-5" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: large;">Welcome to Xmeme</p>
@@ -19,38 +21,79 @@
             <div class="collapse" id="navbarToggleExternalContent">
                 <div class="bg-dark p-4">
 
-                    <form>
+                    <form id="myForm">
                         <div class="form-group row">
-                            <label for="ownerName" class="col-sm-2 col-form-label text-white"><span class="badge badge-pill badge-success">Meme Owner</span></label>
+                            <label for="name" class="col-sm-2 col-form-label text-white"><span class="badge badge-pill badge-success">Meme Owner</span></label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="ownerName" placeholder="Your Name..." required>
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Your Name..." required>
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="memeCaption" class="col-sm-2 col-form-label"><span class="badge badge-pill badge-success">Caption</span></label>
+                            <label for="caption" class="col-sm-2 col-form-label"><span class="badge badge-pill badge-success">Caption</span></label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="memeCaption" placeholder="Meme Caption..." required>
+                                <input type="text" class="form-control" id="caption" name="caption" placeholder="Meme Caption..." required>
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="memeUrl" class="col-sm-2 col-form-label"><span class="badge badge-pill badge-success">Meme URL</span></label>
+                            <label for="url" class="col-sm-2 col-form-label"><span class="badge badge-pill badge-success">Meme URL</span></label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="memeUrl" placeholder="https://&lt;link-to-image&gt;" required>
+                                <input type="text" class="form-control" id="url" name="url" placeholder="https://&lt;link-to-image&gt;" required>
                             </div>
                         </div>
                         
                         <div class="form-group row">
                             <div class="col-sm-12 ";">
-                                <button type="submit" class="alert btn-primary" style="float: left;">Submit Meme</button>
+                                <button id="send" type="submit" class="btn btn-primary" style="float: left;">Submit Meme</button>
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-
+        <div class="container col-11 bg-dark" id="imageDisplay"></div>
     </body>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script>
+        let memeWindow = document.getElementById("imageDisplay");
+         fetch("http://localhost:5000/memes").then((response)=>response.json())
+        .then((data)=>{
+            for(let i of data){
+                imageCard = `<div class="card col-12 pt-3 m-3 border border-primary" >
+  <div class="card-body">
+    <h5 class="card-title">${i.name}</h5>
+    <p class="card-text border border-dark">${i.caption}</p>
+    <img class="card-img " src="${i.url}" alt="Unable to load image">
+  </div>
+</div>`
+    memeWindow.innerHTML += imageCard;
+            }
+        })
+    </script>
+    <script>
+        $("document").ready(function(){
+    $("#send").click(function (event) {
+        event.preventDefault();
+        var message = $("#message").val();
+        let f = document.getElementById("myForm");
+        let name = f.querySelector("input#name").value;
+        let url = f.querySelector("input#url").value;
+        let caption = f.querySelector("input#caption").value;
+        if (url.length==0 || name.length==0 || caption.length==0){
+            alert("Please Enter All Values");
+        }
+        else{
+        $.ajax({
+            url: "http://localhost:5000/memes",
+            type: "POST",
+            contentType: "application/json",
+            data: JSON.stringify({"name": name, "url":url, "caption":caption})
+        }).done(function(data) {
+            f.reset();
+            console.log(data);
+        });
+    }
+    })});
+          
+    </script>
+    
+    
 </html>
